src/objects/Collection_Location__c.object
<CustomObject>
    <description>Fundraising Collection Locations</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Organisation that owns the collection point</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Collection Locations</relationshipLabel>
        <relationshipName>Collection_Locations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collection_Activity__c</fullName>
        <description>Activity at the collection point</description>
        <label>Collection Activity</label>
        <picklist>
            <picklistValues>
                <fullName>Bucket collection</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Collection__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Collection</label>
        <referenceTo>Collection__c</referenceTo>
        <relationshipLabel>Collection Locations</relationshipLabel>
        <relationshipName>Collection_Locations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Count_of_Collectors__c</fullName>
        <label>Total Collector Sessions</label>
        <summarizedField>Collection_Time_Slot__c.Count_of_Collectors__c</summarizedField>
        <summaryForeignKey>Collection_Time_Slot__c.Collection_Location__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Maximum_Number_of_Volunteers__c</fullName>
        <label>Maximum Number of Volunteers</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Number_of_Volunteers__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Minimum Number of Volunteers</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_volunteers_per_session__c</fullName>
        <inlineHelpText>Number of volunteers per session for this location</inlineHelpText>
        <label>Number of volunteers per session</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Status of the Collection Point</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Collection Location</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Collection__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>Collection_Activity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Collection Locations Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Collection Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>